# AdventOfCode

./: .gitignore  README.md  output.txt  pyproject.toml
aoc/: __init__.py  day01.py  day02.py  day04.py  utils.py
aoc/year2015/: day01.py  day02.py
aoc/year2024/: day01.py  day02.py  day03.py  day04.py  day25.py
aoc/year2025/: day01.py  day02.py  day03.py  day04.py  day05.py  day06.py  day07.py  day08.py  dayXX.py
inputs/: .gitkeep
inputs/year2024/: day03_sample.txt
inputs/year2025/: day06_sample.txt
tests/: test_day01.py  test_utils.py
tests/year2024/: test_day01.py
tests/year2025/: test_day01.py
